--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/classting.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Classting Quiz App 김민지</title>
+    <link rel="stylesheet" href="./src/index.css">
   </head>
   <body>
     <div id="root"></div>
